--- a/frontend/src/styles/App.css
+++ b/frontend/src/styles/App.css
@@ -1,28 +1,48 @@
-.App {
-  text-align: center;
-}
+/*.App {
+    margin: 10px
+}*/
 
 .App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+    animation: App-logo-spin infinite 20s linear;
+    height: 80px;
 }
 
 .App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
+    background-color: #222;
+    height: 150px;
+    padding: 20px;
+    color: white;
+    margin-top: 51px;
+    /*border-radius: 4px;*/
 }
 
 .App-title {
-  font-size: 1.5em;
+    font-size: 1.5em;
 }
 
 .App-intro {
-  font-size: large;
+    font-size: large;
 }
 
 @keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+    from {
+        transform: rotate(0deg);
+    }
+
+    to {
+        transform: rotate(360deg);
+    }
+}
+
+.rmd-container {
+    width: 600px;
+    border: 1px solid rgba(0, 0, 0, .125) !default;
+    padding: 8px;
+    margin: 10px auto;
+}
+
+@media screen and (min-width: 768px) {
+    .rmd-container {
+        margin: 50px auto;
+    }
 }
