--- a/frontend/src/styles/App.css
+++ b/frontend/src/styles/App.css
@@ -20,6 +20,7 @@
     display: block;
     margin-right: auto;
     margin-left: auto;
+    text-align: center;
 }
 
 .App-title {
@@ -56,8 +57,10 @@
     margin: 10px auto;
 }
 
+/*
 @media screen and (min-width: 768px) {
     .rmd-container {
         margin: 50px auto;
     }
 }
+*/
