--- a/frontend/src/styles/App.css
+++ b/frontend/src/styles/App.css
@@ -23,6 +23,10 @@
     text-align: center;
 }
 
+.right-block {
+    text-align: right;
+}
+
 .App-title {
     font-size: 1.2em;
     text-align: center;
