--- a/frontend/src/styles/App.css
+++ b/frontend/src/styles/App.css
@@ -16,6 +16,26 @@
     /*border-radius: 4px;*/
 }
 
+.comment-body {
+    background-color: #222;
+    color: white;
+    border: 1px solid black;
+    border-radius: 5px;
+    margin-left: 70px;
+    margin-right: 8px;
+}
+
+.inner-comment {
+    border: 1px solid white;
+    border-radius: 5px;
+    margin: 4px;
+    padding: 4px;
+} 
+
+.tiny-margin {
+    margin-left: 4px;
+}
+
 .center-block {
     display: block;
     margin-right: auto;
